<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fv_tvw_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@color/light_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_background"
        android:orientation="horizontal">

        <com.liujian.myqq.view.ClearEditText
            android:id="@+id/fv_edt_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:hint="@string/input_code_number"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/backgound_color" />

        <TextView
            android:id="@+id/fv_tvw_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/re_send"
            android:textColor="@color/simple_blue"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/fv_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_next"
        android:enabled="false"
        android:minHeight="0dp"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fv_tvw_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="@string/link_to_phone"
        android:textSize="12sp" />
</LinearLayout>
