<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <com.liujian.myqq.view.CircleImageView
        android:id="@+id/fl_ivw_head"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/head"
        myapp:border_color="@color/white"
        myapp:border_width="2dp" />

    <com.liujian.myqq.view.ClearEditText
        android:id="@+id/fl_edt_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_ivw_head"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_background_noline"
        android:hint="@string/qq_phone_mail"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <com.liujian.myqq.view.ClearEditText
        android:id="@+id/fl_edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_edt_account"
        android:background="@drawable/layout_background"
        android:hint="@string/password"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:password="true"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/fl_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_edt_password"
        android:layout_margin="18dp"
        android:background="@drawable/button_register"
        android:minHeight="0dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/fl_tvw_cant_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="15dp"
        android:text="@string/cannot_login"
        android:textColor="@color/simple_blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fl_tvw_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/new_user"
        android:textColor="@color/simple_blue"
        android:textSize="15sp" />

</RelativeLayout>
