<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_background"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/nick"
            android:textColor="@color/deep_gray"
            android:textSize="18sp" />

        <com.liujian.myqq.view.ClearEditText
            android:id="@+id/fs_edt_nick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/backgound_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_background"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:text="@string/password"
            android:textColor="@color/deep_gray"
            android:textSize="18sp" />

        <com.liujian.myqq.view.EyeEditText
            android:id="@+id/fs_edt_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:inputType="textPassword"
            android:hint="@string/password_tip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/backgound_color" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/set_nick_tip"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fs_btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_next"
        android:enabled="false"
        android:minHeight="0dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
