<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_background"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="中国+86"
            android:textColor="@color/simple_blue"
            android:textSize="18sp" />

        <View
            android:layout_width="0.4dp"
            android:layout_height="match_parent"
            android:background="@color/backgound_color" />

        <com.liujian.myqq.view.ClearEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_background"
            android:singleLine="true"
            android:hint="@string/input_your_phone_number"
            android:paddingLeft="15dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_next"
        android:minHeight="0dp"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:text="@string/read_rules"
        android:textSize="12sp" />
</LinearLayout>
